--- a/FilmeTeca/src/pages/Home/style.scss
+++ b/FilmeTeca/src/pages/Home/style.scss
@@ -6,7 +6,7 @@
 
 .container-genero {
 
-  margin: 25px 10px;
+  margin: 6px;
   max-height: 800px;
   padding: 5px;
 
@@ -29,7 +29,7 @@
 
 
 .container-filmes {
-  padding: 20px;
+  padding: 15px;
 }
 
 .title {
@@ -65,15 +65,14 @@
 }
 
 .img-card {
-  flex: 1;
   position: relative;
   // border: 4px solid black;
 }
 
 .img-card img {
   width: 100%;
+
   border-radius: 8px 8px 0 0;
-  // border: 4px solid orange;
 }
 
 .pontuacao-filme {
@@ -113,8 +112,19 @@
 
 .info-card {
   text-align: center;
-  padding: 10px;
-  // border: 4px solid green;
+  padding: 3px;
+  flex: 1;
+}
+
+.info-card h4 {
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.info-card span {
+  font-size: 18px;
+  color: gray;
+  font-weight: bold;
 }
 
 
