--- a/FilmeTeca/src/pages/Login/style.scss
+++ b/FilmeTeca/src/pages/Login/style.scss
@@ -1,4 +1,4 @@
-.container {
+.container-principal {
   width: 100%;
   margin: 0 auto;
 
@@ -6,7 +6,7 @@
 
 .container-login {
   width: 100%;
-  min-height: 100vh;
+  min-height: 90vh;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
