--- a/FilmeTeca/src/pages/Home/style.scss
+++ b/FilmeTeca/src/pages/Home/style.scss
@@ -54,7 +54,7 @@
   background: #fff;
   transition: all 0.3s;
   border-radius: 8px;
-  box-shadow: 8px 2px 23px black;
+  box-shadow: 1px 2px 3px rgba($color: #000000, $alpha: 0.7);
 
   cursor: pointer;
   
