--- a/FilmeTeca/src/pages/Filme/style.scss
+++ b/FilmeTeca/src/pages/Filme/style.scss
@@ -52,19 +52,27 @@
 
 }
 
+.tagline {
+  font-size: 1.2rem;
+  color: gray;
+  font-style: italic;
+}
 
 
 .btn-media{
-  width: 50px;
-  margin: 10px 10px;
-  padding: 10px;
+  width: 46px;
+  height: 38px;
+  margin: 20px 5px;
+  padding: 8px 3px;
   font-size: 1rem;
   border-radius: 50%;
   background-color: #7b2cbf;
   color: white;
   border: none;
-
+  font-size: 1.2rem;
 }
+
+
 
 .title-sinopse {
 
@@ -74,8 +82,21 @@
   color: white;
 }
 
+
+
+
 .sinopse {
   font-size: 1rem;
   color: white;
   text-align: justify;
 }
+
+
+.diretor {
+  display: block;
+  margin-top: 40px;
+  font-size: 1rem;
+  color: white;
+  text-align: justify;
+}
+
