--- a/FilmeTeca/src/pages/Filme/style.scss
+++ b/FilmeTeca/src/pages/Filme/style.scss
@@ -8,6 +8,7 @@
   padding: 20px;
   // margin-top: 60px;
   background-color: #10002b;
+
 }
 
 
@@ -61,7 +62,7 @@
   font-size: 1.1rem;
   color: gray;
   font-style: italic;
-  margin-top: 5pxnoss
+  margin-top: 5px;
   ;
 }
 
@@ -180,6 +181,24 @@
   padding: 20px 60px;
 }
 
+
+.container-comentarios {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.area-principal {
+  margin-top: 3%;
+  margin-bottom: 5%;
+  width: 95%;
+  border-radius: 6px;
+  background-color: var(--roxo-escuro);
+  padding: 8px 3px;
+}
+
+
 .cabecalho-comentarios{
   margin: 20px 60px;
 }
@@ -189,7 +208,7 @@
   font-size: 1.1rem;
   font-weight: bold;
   // padding: 0px 60px;
-  border-bottom: 2px solid black;
+  border-bottom: 2px solid var(--roxo-claro);
 }
 
 .novo-comentario img {
@@ -203,9 +222,11 @@
 .novo-comentario textarea {
   flex: 1;
   font-size: 1.1rem;
-  height: 70px;
+  height: 100px;
+  border-radius: 10px;
   border: 1px solid gray;
   padding: 10px;
+  resize: none;
 }
 
 .novo-comentario button {
@@ -214,7 +235,7 @@
   height: 40px;
   border: none;
   padding: 5px 10px;
-  margin-left: 10px;
+  margin-left: 5px;
   font-size: 1.1em;
   border-radius: 10px;
   align-self: flex-end;
@@ -250,7 +271,6 @@
 }
 
 .nome-usuario {
-  color: #10002b;
   font-size: 1.1rem;
   font-weight: bold;
 }
