--- a/FilmeTeca/src/pages/Home/style.scss
+++ b/FilmeTeca/src/pages/Home/style.scss
@@ -3,34 +3,50 @@
   --roxo-claro: #7b2cbf;
 }
 
-
-
 .container {
   display: grid;
   grid-template-columns: 1fr 3fr;
+  align-content: center;
+}
+
+.area-genero {
+  display: flex;
+  justify-content: center;
+  margin-top: 5%;
+  padding: 5px;
 }
 
 .container-genero {
 
-  margin: 2rem 2rem;
+  // margin: 2rem;
   width: 300px;
   height: max-content;
   padding: 35px 30px;
   border-radius: 8px;
-  box-shadow: 1px 1px 5px 1px black;
-  background: var(--roxo-escuro);
-  color: white;
+  box-shadow: 3px 3px 3px rgba(0, 0, 0, 0.25);
+  background: white;
+  color: black;
 
   h2 {
+    font-size: 1.3rem;
     margin-bottom: 20px;
-    font-size: 2rem;
+    border-bottom: 1px solid #c5c9c6;
   }
+
+  // p {
+  //   font-size: 14px;
+  //   color: gray;
+  //   font-weight: bold;
+  //   margin-bottom: 20px;
+  // }
 
   .lista-genero {
     list-style: none;
     font-size: 1.1rem;
-    line-height: 3;
+    line-height: 2.5;
+    
   }
+
 
   .lista-genero label{
     cursor: pointer;
@@ -46,20 +62,18 @@
     width: 1.2rem;
     height: 1.2rem;
     border-radius: 4px;
-    background: var(--roxo-claro);
-    border: 1px solid var(--roxo-escuro);
+    background: whitesmoke;
+    border: 1px solid #c5c9c6;
     display: inline-block;
     vertical-align: middle;
     margin-right: 8px;
     margin-bottom: 4px;
     cursor: pointer;
 
-
-
   }
 
   .lista-genero input:checked + label:before {
-    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='23' height='23' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='2' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%0A%3Csvg xmlns='http://www.w3.org/2000/svg' width='23' height='23' viewBox='0 0 10 10'%3E%3Cg class='nc-icon-wrapper' stroke-width='1' fill='%23555555'%3E%3Cpath fill='none' stroke='%23FFFFFF' stroke-linecap='round' stroke-linejoin='round' stroke-miterlimit='10' data-cap='butt' d='M2.83 4.72l1.58 1.58 2.83-2.83'/%3E%3C/g%3E%3C/svg%3E");
     background-color: var(--roxo-claro);
     background-position: center;
     border: none;
@@ -71,6 +85,7 @@
 
 .container-filmes {
   padding: 15px;
+  margin-right: 5%;
 }
 
 .title {
@@ -85,7 +100,7 @@
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   column-gap: 2rem;
-  row-gap: 3rem;
+  row-gap: 2rem;
 }
 
 .card-filme {
@@ -95,7 +110,7 @@
   background: #fff;
   transition: all 0.3s;
   border-radius: 8px;
-  box-shadow: 1px 2px 3px rgba($color: #000000, $alpha: 0.7);
+  box-shadow: 1px 2px 3px rgba($color: gray, $alpha: 0.7);
 
   cursor: pointer;
   
