--- a/FilmeTeca/src/pages/Filme/style.scss
+++ b/FilmeTeca/src/pages/Filme/style.scss
@@ -175,48 +175,25 @@
 
 .novo-comentario {
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  // justify-content: center;
+  // align-items: center;
+  // flex-wrap: wrap;
   padding: 20px 60px;
 }
 
-
-.container-comentarios {
-  color: white;
+.novo-comentario div {
   display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.area-principal {
-  margin-top: 3%;
-  margin-bottom: 5%;
-  width: 95%;
-  border-radius: 6px;
-  background-color: var(--roxo-escuro);
-  padding: 8px 3px;
-}
-
-
-.cabecalho-comentarios{
-  margin: 20px 60px;
-}
-
-
-.qtd-comentarios {
-  font-size: 1.1rem;
-  font-weight: bold;
-  // padding: 0px 60px;
-  border-bottom: 2px solid var(--roxo-claro);
+  flex-direction: row;
 }
 
 .novo-comentario img {
-  width: 55px;
+  width: 3%;
   border: 1px solid gray;
   border-radius: 50%;
   margin-right: 5px;
   align-self: flex-start;
+  
 }
 
 .novo-comentario textarea {
@@ -235,11 +212,42 @@
   height: 40px;
   border: none;
   padding: 5px 10px;
-  margin-left: 5px;
+  margin-top: 10px;
   font-size: 1.1em;
   border-radius: 10px;
-  align-self: flex-end;
 }
+
+
+.container-comentarios {
+  color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.area-principal {
+  margin-top: 3%;
+  margin-bottom: 5%;
+  width: 70%;
+  border-radius: 6px;
+  background-color: white;
+  padding: 8px 3px;
+}
+
+
+.cabecalho-comentarios{
+  margin: 20px 60px;
+}
+
+
+.qtd-comentarios {
+  color: var(--roxo-claro);
+  font-size: 1.1rem;
+  font-weight: bold;
+  // padding: 0px 60px;
+  border-bottom: 2px solid var(--roxo-claro);
+}
+
 
 
 .comentarios {
@@ -271,6 +279,7 @@
 }
 
 .nome-usuario {
+  color: var(--roxo-claro);
   font-size: 1.1rem;
   font-weight: bold;
 }
