--- a/FilmeTeca/src/components/Navbar/styles.scss
+++ b/FilmeTeca/src/components/Navbar/styles.scss
@@ -19,8 +19,8 @@ nav {
   justify-content: space-between;
   align-items: center;
   background: #10002b;
-  height: 6vh;
-  padding: 0 40px;
+  //height: 6vh;
+  padding: 5px 25px;
   border-bottom: 2px solid #7b2cbf;
 }
 
