--- a/FilmeTeca/src/pages/Filme/style.scss
+++ b/FilmeTeca/src/pages/Filme/style.scss
@@ -228,7 +228,7 @@
 .area-principal {
   margin-top: 3%;
   margin-bottom: 5%;
-  width: 70%;
+  width: 1024px;
   border-radius: 6px;
   background-color: white;
   padding: 8px 3px;
