--- a/FilmeTeca/src/pages/Filme/style.scss
+++ b/FilmeTeca/src/pages/Filme/style.scss
@@ -270,7 +270,7 @@
 .usuario-comentario img {
   width: 55px;
   border: 1px solid gray;
-  border-radius: 50%;
+  border-radius: 50px;
   margin-right: 8px;
 }
 
@@ -297,6 +297,30 @@
 .comentario {
   margin-top: 3px;
 }
+
+
+.modal-overlay {
+  background: whitesmoke;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.modal-content {
+  width: 80%;
+  max-width: 300px;
+  background: white;
+  padding: 10px;
+  border-radius: 10px;
+}
+
+
 
 
 
